// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serve web (/Users/dom/projects/redwood/redwood/packages/web-server/dist/bin.js) > errors out on unknown args 1`] = `
"rw-web-server

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development [string] [default: "::"]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL                         [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL            [deprecated] [string]

Unknown arguments: foo, bar, baz
"
`;

exports[`serve web (/Users/dom/projects/redwood/redwood/packages/web-server/dist/bin.js) > fails if apiHost isn't set and apiUrl isn't fully qualified 1`] = `
"Error: If you don't provide \`apiProxyTarget\`, \`apiUrl\` needs to be a fully-qualified URL. \`apiUrl\` is '/.redwood/functions'
"
`;

exports[`serve web (/Users/dom/projects/redwood/redwood/packages/web-server/dist/bin.js) > has help configured 1`] = `
"rw-web-server

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development [string] [default: "::"]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL                         [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL            [deprecated] [string]
"
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/api-server/dist/index.js', 'web' ]) > errors out on unknown args 1`] = `
"rw-server web

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development [string] [default: "::"]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL                         [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL            [deprecated] [string]

Unknown arguments: foo, bar, baz
"
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/api-server/dist/index.js', 'web' ]) > fails if apiHost isn't set and apiUrl isn't fully qualified 1`] = `
"Error: If you don't provide \`apiProxyTarget\`, \`apiUrl\` needs to be a fully-qualified URL. \`apiUrl\` is '/.redwood/functions'
"
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/api-server/dist/index.js', 'web' ]) > has help configured 1`] = `
"rw-server web

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development [string] [default: "::"]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL                         [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL            [deprecated] [string]
"
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/cli/dist/index.js', 'serve', 'web' ]) > errors out on unknown args 1`] = `
"rw serve web

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
      --cwd                                 Working directory to use (where
                                            \`redwood.toml\` is located)
      --telemetry                           Whether to send anonymous usage
                                            telemetry to RedwoodJS     [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development [string] [default: "::"]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL                         [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL            [deprecated] [string]

Unknown arguments: foo, bar, baz
"
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/cli/dist/index.js', 'serve', 'web' ]) > fails if apiHost isn't set and apiUrl isn't fully qualified 1`] = `
"Error: If you don't provide \`apiProxyTarget\`, \`apiUrl\` needs to be a fully-qualified URL. \`apiUrl\` is '/.redwood/functions'
"
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/cli/dist/index.js', 'serve', 'web' ]) > has help configured 1`] = `
"rw serve web

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
      --cwd                                 Working directory to use (where
                                            \`redwood.toml\` is located)
      --telemetry                           Whether to send anonymous usage
                                            telemetry to RedwoodJS     [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development [string] [default: "::"]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL                         [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this host. apiUrl must be a relative
                                            URL            [deprecated] [string]
"
`;
